--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,12 @@
     width: 400px;
 }
 
+.disclaimer{
+    position: relative;
+    top: 50px;
+    text-align: center;
+}
+
 .calculator-screen{
     width: 100%;
     height: 100%;
